# github-trending-feeds

./: .gitignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.json  .prettierrc.yaml  CLAUDE.md  README.md  README_ja.md  Taskfile.yml  languages.txt  pyproject.toml  renovate.json  requirements.txt  urls.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: renovate-pr-check.yaml  scrape_daily_trending.yml  scrape_monthly_trending.yml  scrape_trending_daily.yml  scrape_trending_monthly.yml  scrape_trending_weekly.yml  scrape_weekly_trending.yml
apps/: new_arrivals.py  new_links.py  scrape.py  unique_list.py
docs/: index.html
docs/feeds/1c-enterprise/: daily.atom
docs/feeds/2-dimensional-array/: daily.atom  weekly.atom
docs/feeds/4d/: daily.atom  monthly.atom
docs/feeds/abap/: daily.atom  monthly.atom  weekly.atom
docs/feeds/abap-cds/: daily.atom  weekly.atom
docs/feeds/abnf/: daily.atom
docs/feeds/actionscript/: daily.atom  weekly.atom
docs/feeds/ada/: daily.atom  weekly.atom
docs/feeds/adblock-filter-list/: daily.atom
docs/feeds/adobe-font-metrics/: daily.atom
docs/feeds/agda/: daily.atom
docs/new-arrivals/: daily.atom
scripts/: remove_ds_store.sh  scrape_daily_trending.sh  scrape_monthly_trending.sh  scrape_trending_daily.sh  scrape_trending_monthly.sh  scrape_trending_weekly.sh  scrape_weekly_trending.sh
src/: export_unique_urls.py  filter_new_arrivals.py  generate_index_html.py  scrape_languages.py  scrape_trending.py  sort_lines.py  unique_list.py
urls/: daily.txt  monthly.txt  weekly.txt
(+4028 files in other folders)
